tests/baselines/reference/primitiveTypeAsClassName.errors.txt
==== tests/cases/compiler/primitiveTypeAsClassName.ts (1 errors) ====
    class any {}
          ~~~
!!! error TS2414: Class name cannot be 'any'